# datagen-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
datagen_system/: home.py
datagen_system/services/: data.py
